# pzsp2-24z

./: .pdm-python  README.md  docker-compose.yaml  package-lock.json
backend/: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/src/backend/: app.py  db_controller.py  models.py  udp_controller.py  utils.py
backend/src/backend/routes/: api.py  auth.py  platforms.py
backend/src/backend/scripts/: create_database.sql  init_database.sql
backend/src/backend/utils/: auth_utils.py  data_models.py  utils.py
backend/src/backend/utils/database_utils/: data_models.py  db_controller.py  fetching.py  models.py  storing.py  user_repository.py
backend/tests/api_tests/: conftest.py  test_auth.py  test_platforms.py  test_udp_server.py
backend/tests/backend_logic_tests/utils_tests/database_utils_tests/: test_fetching.py  test_storing.py
docs/architecture/: c4-pzsp2.drawio
docs/database/: REAMDE.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  main.tsx  routeTree.gen.ts
riot-os/posix-sockets/: Makefile
riot-os/temp-sensor/: .gitignore  Makefile  decrypt.py  dht11_module.c  dht11_module.h  encrypt.c  encrypt.h  gnrc_udp.c  gnrc_udp.h  main.c  readme.md  test_udp.py  text.txt
riot-os/udp-client/: Makefile  README.md
riot-os/udp-my-client/: Makefile  main.c
riot/dtls-riot-host/: Makefile  main.c
riot/dtls-wolfssl/: Makefile
scripts/: add_admin.sql  clear_db.sql  create_database.sql  init_database.sql  populate_db.sql
sensor_app/: package-lock.json  package.json
sensor_app/src/: App.tsx
sensors_app/: docker-compose.yml
sensors_app/backend/: Dockerfile  app.py
sensors_app/frontend/: package-lock.json  package.json
server_py/: aes.h  readme.md
temperature-humidity-app/: package-lock.json  package.json
temperature-humidity-app/backend/: app.py  requirements.txt
temperature-humidity-app/src/: App.css
(+63 files in other folders)
